Queuing a task in EventLoop is not working with UserMediaRequest allow completion handler Queuing a task in EventLoop is not working with completion handlers https://bugs.webkit.org/show_bug.cgi?id=204565 <rdar://problem/57466280>

Reviewed by Ryosuke Niwa.

Do not capture the completion handler in lambda passed to the event queue.
Instead, keep it in UserMediqRequest and call it either when running the task or when destroying UserMediaRequest.
Covered by existing tests failing the debug assertion.

* Modules/mediastream/UserMediaRequest.cpp:
(WebCore::UserMediaRequest::~UserMediaRequest):
(WebCore::UserMediaRequest::allow):
* Modules/mediastream/UserMediaRequest.h:


Canonical link: https://commits.webkit.org/217853@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@252878 268f45cc-cd09-0410-ab3c-d52691b4dbfc