Source/WebCore/Modules/mediastream/UserMediaRequest.h
@@ -94,6 +94,7 @@ private:
     Vector<String> m_audioDeviceUIDs;
 
     UniqueRef<DOMPromiseDeferred<IDLInterface<MediaStream>>> m_promise;
+    CompletionHandler<void()> m_allowCompletionHandler;
     MediaStreamRequest m_request;
 };
 
